# veil

./: .gitignore  ai.py  analyze_bouts.py  arena.py  audio.py  combat.py  config.py  controls.py  game.py  main.py  particle.py  pyproject.toml  record_bouts.py  scores.py  settings.py  ship.py  specification.txt  telemetry.py  utils.py
.deft/core/: VERSION
.deft/core/docs/reference/forensic-research/: README.md  SKILL.md
.deft/core/docs/reference/forensic-research/references/: failures.md  follow-ups.md  forensic-mode.md  investigation-profile.md  orchestrator-protocol.md  (+3 more)
.deft/core/scripts/: scope_lifecycle.py
tests/: test_ai.py  test_ai_boss_bout.py  test_ai_center.py  test_ai_champion.py  test_ai_cover.py  test_ai_fire.py  test_ai_heavy_duel.py  test_ai_injury_pickup.py  test_ai_obstacles.py  test_ai_orbit.py  test_ai_pilot_profile.py  test_ai_powerup.py  test_ai_powerup_risk.py  test_ai_predict.py  test_ai_range.py  test_ai_reverse_gun.py  test_ai_shot_align.py  test_ai_situation.py  test_ai_survival.py  test_ai_tactics.py  test_ai_tail_six.py  test_ai_targeting.py  test_ai_wrap.py  test_arena.py  test_arena_extra.py  test_audio.py  test_borderless.py  test_champion.py  test_combat.py  test_combat_extra.py  test_combat_integration.py  test_controls.py  test_controls_extra.py  test_game.py  test_game_extra.py  test_game_integration.py  test_particle.py  test_powerup_asteroids.py  test_projectile_obstacles.py  test_range_damage.py  (+9 more)
vbrief/: PROJECT-DEFINITION.vbrief.json
vbrief/completed/: 2026-06-20-veil-mvp-minimal-vector-skirmish.vbrief.json
(+3 files in other folders)
